# gpu-inference-kernel

./: CMakeLists.txt  a.out  main.cu
bench/: bench_launch_overhead.csv  bench_vector_add.txt
docs/: README_run.md  coalescing_penalty.md  hardware.md  timeline_artifact.md  week1_docs.md
kernels/: async_streams.cu  coalescing_penalty.cu  device_query.cu  histogram.cu  launch_overhead.cu  mem_transfer.cu  prefix_sum.cu  sum_vector.cu  transpose.cu  vector_add.cu
